--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@
     margin-left: 1px;
 }
 .route-graph li {
-    font-size: 18px;
+    font-size: 24px;
     height: 24px;
     position: absolute;
     top: 0;
@@ -66,10 +66,16 @@
     height: 100%;
     width: 100%;
     text-align: center;
+    font-style: normal;
+    position: relative;
+    top: -4px;
 }
 
 .route-graph .leg-bar .leg-indicator {
-   color: white;
+    color: white;
+    font-size: 18px;
+    maring-top: -1px;
+    font-weight: lighter;
 }
 
 ul {
