--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@
     margin-left: 1px;
 }
 .route-graph li {
-    font-size: 24px;
+    font-size: 25px;
     height: 24px;
     position: absolute;
     top: 0;
@@ -69,6 +69,8 @@
     font-style: normal;
     position: relative;
     top: -4px;
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-weight: normal;
 }
 
 .route-graph .leg-bar .leg-indicator {
