display more route information

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,7 +148,7 @@
 //    margin-top: -38px;
     margin-top: -45px;
     font-weight: bold;
-    text-shadow: none;    
+    text-shadow: 0 1px 0 #FFFFFF;
 //    background: white;
 }
 
