--- a/static/css/main.css
+++ b/static/css/main.css
@@ -151,11 +151,16 @@
 	left: -8px;
 }
 
+.leaflet-label span span:not(:empty) {
+    margin-left: 5px;
+}
+
 .leaflet-label .counter {
     display: inline-block;
     font-size: 24px;
     padding-left: 6px;
     border-left: thin grey solid;
+    margin-left: 7px;
 }
 
 .leaflet-label .counter.firstlegfalse,
