implement feedback messages for poi searches

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,6 +25,11 @@
     pointer-events: auto;
 }
 
+.ui-li-static {
+//    opacity: 0.5;
+    background-color: rgba(255,255,255,0.5);
+}
+
 .navigator-div-icon {
     height: 100%
 }
