--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,8 +31,44 @@
 }
 
 .navigator-div-icon {
-    height: 100%
+    height: 100%;
 }
+
+.navigator-div-icon img {
+    border-radius: 100px;
+    background: #007ac9;
+    display: none;
+}
+
+.navigator-div-icon span {
+    display: inline-block;
+    vertical-align: text-top;
+}
+
+.navigator-div-icon div {
+    display: block;
+    border-radius: 100px;
+    color: white;
+    text-shadow: none;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    border: 2px solid white;
+    font-weight: bold;
+}
+
+.navigator-div-icon div:before {
+	border-right: 6px solid black;
+	border-right-color: black;
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	content: "";
+	position: absolute;
+	top: 8px;
+	left: -6px;
+//        transform-origin: 18px 6px;
+}
+
 
 /* Position the map controls below the title header */
 .leaflet-top {
